@@ -90,7 +90,7 @@
 			hr="true"
 			/>
 			
-			<field name="subslider" type="spacer"
+			<field name="spacer2" type="spacer" class="spacer"
 			label="COM_CONTENT_DRILL_CATEGORIES_LABEL"
 			/>
 			
@@ -106,7 +106,7 @@
 </fieldset>
 
 <fieldset name="category" label="JGLOBAL_CATEGORY_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer3" type="spacer" class="spacer"
 			label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>	
 			
@@ -190,7 +190,7 @@
 			
 </fieldset>
 <fieldset name="blog" label="JGLOBAL_BLOG_LAYOUT_OPTIONS">
-				<field name="subslider" type="spacer"
+				<field name="spacer4" type="spacer" class="spacer"
 				label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 
@@ -232,7 +232,7 @@
 			</field>
 			
 			<field
-			name="spacer1"
+			name="spacer5"
 			type="spacer"
 			hr="true"
 			/>
@@ -299,7 +299,7 @@
 
 
 <fieldset name="advanced" label="JGLOBAL_LIST_LAYOUT_OPTIONS" >
-			<field name="subslider" type="spacer"
+			<field name="spacer6" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>			
 
