@@ -85,7 +85,7 @@
 		</fieldset>
 		
 		<fieldset name="category" label="JGLOBAL_CATEGORY_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer2" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 			
@@ -162,7 +162,7 @@
 		</fieldset>
 
 		<fieldset name="advanced" label="JGLOBAL_LIST_LAYOUT_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer1" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 			<field name="show_pagination_limit"
