@@ -88,7 +88,7 @@
 	</fieldset>
 	
 	<fieldset name="category" label="JGLOBAL_CATEGORY_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer1" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 			
@@ -164,7 +164,7 @@
 	</fieldset>
 	
 	<fieldset name="advanced" label="JGLOBAL_LIST_LAYOUT_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer2" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 			<field	name="show_pagination_limit" type="list"			
