@@ -26,7 +26,7 @@
 	<!-- Add fields to the parameters object for the layout. -->
 <fields name="params">
 <fieldset name="basic" label="JGLOBAL_CATEGORY_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer1" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 			
@@ -102,7 +102,7 @@
 	</fieldset>
 	
 	<fieldset name="advanced" label="JGLOBAL_LIST_LAYOUT_OPTIONS">
-			<field name="subslider" type="spacer"
+			<field name="spacer2" type="spacer" class="spacer"
 					label="JGLOBAL_SUBSLIDER_DRILL_CATEGORIES_LABEL"
 			/>
 			
